<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myVoicemail</string>
    <string name="audio_source">Audio source</string>
    <string name="audio_format">Audio format</string>
    <string name="view_voicemail">View Voicemail</string>
    <string name="delay_before_answer">Delay before answer</string>
    <string name="use_speakerphone">Use speakerphone?</string>
    <string name="speakerphone_on_greeting">Speakerphone on greeting</string>
    <string name="greeting_volume">Greeting Volume (0 - 10)</string>
    <string name="speakerphone_on_recording">Speakerphone on recording</string>
    <string name="use_external_storage">Use myVoicemail Viewer \n and SD card storage </string>
    <string name="storage_location">/sdcard/voicemail</string>
    <string name="saved_messages">Saved messages</string>
    <string name="recorder_audio_source">Recorder audio source</string>
    <string name="enable_voicemail">Enable voicemail</string>
    <string name="max_message_duration_sec">Max message duration (sec)</string>
    <string name="message_storage_directory">Message storage directory</string>
    <string name="recorder_options">Recorder options</string>
    <string name="recording_audio_format">Recording audio format</string>
    <string name="greeting_options">Greeting options</string>
    <string name="greeting_type">Greeting file</string>
    <string name="select_greeting_wav_format">Select greeting audio file</string>
    <string name="greeting_stream">Greeting stream</string>
    <string name="select_greeting_stream">Select greeting stream</string>
    <string name="view_messages">View messages</string>
    <string name="play_greeting">Play greeting</string>
    <string name="message_playback">Message playback</string>
    <string name="evaluation">Evaluation</string>
    <string name="seconds">seconds</string>
    <string name="description">Description</string>
    <string name="Default">Default</string>
    <string name="alternative">Alternative</string>
    <string name="custom">Custom</string>
    <string name="limited_to">Limited to</string>
    <string name="storage_viewer_summary">Choice between in-app viewer and Call Log viewer</string>
    <string name="storage_viewer_title">Storage and viewer</string>
    <string name="storage_viewer_dialog_title">Choose storage an viewing option</string>
    <!-- Not used -->
    <string name="title_recording_detail">title_recording_detail</string>
    <string name="callDetailTitle">callDetailTitle</string>
    <string name="hello_world"> "Status view 
        Press Menu for Options"</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_close">Close</string>
    <string name="recording_enabled_prompt">Record during calls</string>
    <string name="greeting_audio_mode">Greeting audio mode</string>
    <string name="recorder_audio_mode">Recorder audio mode</string>
    <string name="select_greeting_audio_mode">Greeting audio mode choice</string>
    <string name="select_recorder_audio_mode">Recorder audio mode choice</string>
    <string name="hang_up">Hang Up</string>
    <string name="keep_recording">Keep recording</string>
    <string name="take_this_call">Take this call</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="X">X</string>
    <string name="title_activity_record_greeting">RecordGreetingActivity</string>
    <string name="action_settings">Settings</string>
   <string name="record_new_greeting">Record new greeting</string>
   <string name="you_have_new_voice_mail">You have new voice mail</string>
   <string name="start_recording">Start Recording</string>
   <string name="stop_recording">Stop Recording</string>
   <string name="start_playback">Start Playback</string>
   <string name="stop_playback">Stop Playback</string>
   <string name="save_to_file">Save to file:</string>
   <string name="save">Save</string>
   <string name="back">Back</string>  
   <string name="get_full_version">Get Full Version</string>
    <string name="need_record_audio_permission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="status_record_audio_denied">Error: Permission for RECORD_AUDIO was denied</string>

</resources>