

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecordGreetingActivity" >

<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    >
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="    " android:id="@+id/StatusTextView"/>
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_recording" android:id="@+id/RecordingButton"></Button>
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_playback" android:id="@+id/PlaybackButton"></Button>
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save" android:id="@+id/SaveXButton"></Button>
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save_to_file" android:id="@+id/SaveToFileButton"></Button>
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="   " android:id="@+id/XXXXXView"/>
	<EditText 
     android:id="@+id/GreetingFileName"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:inputType="text"
     android:text="new_greeting.pcm" 
     />       
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/back" android:id="@+id/DoneButton"></Button>
    	
</LinearLayout>
	
</RelativeLayout>
